hphp/test/zend/bad/errmsg_017.php
<?php

class test {
	function __unset() {
	}
}

echo "Done\n";
?>